Updated docker file

--- a/TradeServiceMaven/Dockerfile-app
+++ b/TradeServiceMaven/Dockerfile-app
@@ -1,9 +1,9 @@
-FROM openjdk:11-jdk-alpine
+FROM openjdk:11.0
 
-COPY target/trade-0.0.1-SNAPSHOT.jar app.jar
+ADD target/trade-0.0.1-SNAPSHOT.jar app.jar
 
 EXPOSE 8080
 
-ENV TRADE_URI=mongodb://mymongodb:27017/test
+ENV TRADE_URI=mongodb://mymongodb:27017/tradedb
 
 ENTRYPOINT ["java", "-jar", "/app.jar"]
